# yazio-mcp-py

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
src/yazio_mcp/: __init__.py  auth.py  client.py  models.py  server.py
tests/: test_auth.py  test_client.py
