[project]
name = "yazio-mcp-py"
version = "0.1.0"
description = "A Python MCP server for the (unofficial) Yazio nutrition API — read, write, and search your Yazio data from any MCP client."
readme = "README.md"
authors = [
    { name = "Batuhan Caniberk", email = "batubln@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "mcp[cli]>=1.2",
]

[project.scripts]
yazio-mcp = "yazio_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "yazio_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
